# mcfAuction

./: .gitignore  .hgsub  1  2  3  LICENSE  Makefile  O0no  O0ye  O3no  O3ye  README.md  auction  auction.cpp  auction.cu  auction.cu.orig  auction.cuh  auction_cpu  futureMakefile  log1  mcftruedata.sh  tags  test.cpp  test.sh
LEMON/install/lib/pkgconfig/: lemon.pc
LEMON/install/share/doc/lemon/html/: a00002.html  a00014.html  a00164.html  a00173.html  a00176.html  a00179.html  a00182.html  a00185.html  a00188.html  a00191.html  a00200.html  a00203.html  a00215.html  a00218.html  a00224.html  a00257.html  a00260.html  a00269.html  a00275.html  a00278.html  a00284.html  a00290.html  a00299.html  a00305.html  a00308.html  a00317.html  a00323.html  a00332.html  a00335.html  a00338.html  a00350.html  a00359.html  a00365.html  a00386.html  a00389.html  a00395.html  a00410.html  a00416.html  a00419.html  a00422.html  (+718 more)
LEMON/install/share/doc/lemon/html/search/: all_1.js  all_10.js  all_13.js  all_14.js  all_15.js  all_16.js  all_19.js  all_1b.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_16.js  classes_3.js  classes_5.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  defines_0.js  enums_3.js  enums_4.js  enums_8.js  enumvalues_0.js  enumvalues_2.js  enumvalues_4.js  enumvalues_7.js  enumvalues_a.js  enumvalues_d.js  enumvalues_e.js  files_0.js  (+56 more)
cpu/: auction.cpp
data/good/: data1.min  data2.min  data3.min
data/lgf/: netcard_1080_1097.sol  vga_lcd_396_413.lgf  vga_lcd_396_413.sol
data/min/: netgen_8_08b.min
gpu/: auction.cu  auction.cuh
include/: constructor_graph.h  graph.h  mcf_auction.h  min_cost_flow_gpu.h
log/: Cost.perf.data  a
min_cost_flow/cpu/: CMakeLists.txt  Makefile  auction.cpp  auction.h  cpu.h
min_cost_flow/gpu/: CMakeLists.txt  auction.cu  auction.cuh
min_cost_flow/lgf_api/: smartdigraph.cpp  smartdigraph.h
test/data/: lgf2min.cpp
test/data/good/: data4.min
test/data/lgf/: min_graph.lgf  netgen_8_08c.lgf  vga_lcd_396_413.lgf
test/lgf_test/: CMakeLists.txt  a.cpp  a.out  test.cpp
